--- a/dhara/www/css/index.css
+++ b/dhara/www/css/index.css
@@ -1,6 +1,6 @@
 
 .mobile-custom *{
-    background:transparent;
+  /*  background:transparent;*/
     border:none;
     border-radius: 0;
     box-shadow: none !important;
@@ -9,11 +9,24 @@
     text-decoration:none;
     position:relative;
     font-weight: 100;
+    font-size: 6vw;
 }
 .mobile-custom div[data-role="page"]{
-    padding:0!important;
+    
     background: url('../images/bg.jpg')repeat !important;
 }
+
+.allpage
+{
+    padding:0 !important;    
+}
+
+.loginpage
+{
+    margin-top: 5vw;
+    padding:10vw !important;
+}
+
 .mobile-custom  li {
     border-bottom:1px solid #ececec ;
 }
@@ -88,7 +101,7 @@
     font-weight: 100;
 }
 .ui-btn-inner{
-    padding:30px 0;
+    padding:5vw 0;
   /*  line-height: 2;*/
     background-color:#71ae08;
 }
@@ -105,7 +118,7 @@
     color: #fff;
 }
 
-.mobile-custom input[type="text"],.mobile-custom a >span{
+.mobile-custom input[type="text"],.mobile-custom input[type="password"],.mobile-custom a >span{
 
     font-family: "Myriad Pro",sans-serif;
     text-align: left;
@@ -116,9 +129,9 @@
     bottom: 0;
     width: 100%;
 }
-.mobile-custom input[type="text"]{
+.mobile-custom input[type="text"],.mobile-custom input[type="password"]{
     margin:5vw 0 !important;
-    padding:2vw 0!important;
+    padding:4vw 0!important;
     border:none;
     box-shadow: none;
     font-family: "Myriad Pro",sans-serif;
@@ -348,6 +361,7 @@ text-decoration: underline;
 }
 .iconsprite-mn-arrow-left{
     background-position: -145px -94px;
+    margin-left: -75vw !important;
 }
 .iconsprite-mn-page{
     background-position: -254px -38px;
@@ -708,7 +722,10 @@ text-decoration: underline;
 
 input{
   
-  float: right;
+ /* float: right;*/
+    background-color: #71ae08;
+    padding: 7vw;
+    width: 100%;
     
     
 }
@@ -747,10 +764,10 @@ label{
     
     .mobile-custom h2,
     .mobile-custom div[data-role="header"] h1,
-    .mobile-custom input[type="text"],
+    .mobile-custom input[type="text"],.mobile-custom input[type="password"],
     .mobile-custom a >span
     {
-        font-size:30px!important;
+        font-size:7vw !important;
         /*width: 35%;
         margin: auto;
         color: #000;*/
@@ -789,7 +806,7 @@ label{
     
     .mobile-custom h2,
     .mobile-custom div[data-role="header"] h1.ui-title,
-    .mobile-custom input[type="text"],
+    .mobile-custom input[type="text"],.mobile-custom input[type="password"],
     .mobile-custom a >span
     {
     font-size:26px!important;
@@ -831,7 +848,7 @@ label{
     
     .mobile-custom h2,
     .mobile-custom div[data-role="header"] h1.ui-title,
-    .mobile-custom input[type="text"],
+    .mobile-custom input[type="text"],.mobile-custom input[type="password"],
     .mobile-custom a >span
     {
     font-size:22px!important;
@@ -887,7 +904,7 @@ label{
     
     .mobile-custom h2,
     .mobile-custom div[data-role="header"] h1.ui-title,
-    .mobile-custom input[type="text"],
+    .mobile-custom input[type="text"],.mobile-custom input[type="password"],
     .mobile-custom a >span
     {
     font-size:18px!important;
@@ -2441,6 +2458,17 @@ use translate instead of translate3d for the first move.
     width: 100%;
 }
 
+.imglogo
+{
+    margin: auto;
+    position: relative;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    width: 75%;
+}
+
 .plusclass
 {
     float: right;
@@ -2465,12 +2493,18 @@ use translate instead of translate3d for the first move.
     margin: auto;
 }
 
+.logo
+{
+    width: 100%;
+    margin: auto;
+}
+
 .text1{font-size:5vw; float:left}
 .text2{font-size:3vw; margin-top:4vw; float:left; clear:both}
 .text2 span{color:#F00;}
 .qnty{ clear:both; width:100%; float:left}
 .textfeeld_qt{width:50% !important;float:left;background-color: #fff !important;}
-.textfeeld_text{width:20%;font-size:4vw;float:left; margin:8vw 0}
+.textfeeld_text{width:20%;font-size:4vw;float:left;padding: 2vw 0; margin:5vw 0}
 .pd{ padding:0 15px}
 .cont_detail{padding:15px;}
 
@@ -2478,4 +2512,52 @@ use translate instead of translate3d for the first move.
 .carticon
 {
     width: 85%;
+}
+
+.fieldsubmit
+{
+    background-color: #71ae08;
+    padding: 5vw 0;
+    width: 100%;
+    color: #fff !important;
+    clear:both !important;
+    display: block;
+    font-size: 5vw;
+    min-width: 0.75em;
+    overflow: hidden;
+    padding: 0.6em 20px;
+    position: relative;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.flds {
+    cursor: pointer;
+    text-align: center;
+    font-family: Helvetica,Arial,sans-serif;
+    color: #222;
+}
+.ui-btn-up-c, .ui-btn-hover-c, .ui-btn-down-c {
+  
+}
+.ui-btn-up-c {
+  
+}
+
+body
+{
+    background: url('../images/bg.jpg')repeat !important;  
+}
+
+.button
+{
+    background-color: #71ae08;
+    color: #fff;
+    width: 100%;
+    font-size: 5vw;
+    padding: 5vw;    
+}
+
+u {
+    text-decoration: underline;
 }
